--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- CSS link -->
     <link rel="stylesheet" href="styles.css">
 
@@ -359,7 +359,7 @@
                         </div>
                         <div class="project-content">
                             <div class="project-category">Web App</div>
-                            <h3 class="project-title">Restaurante & Delivery</h3>
+                            <h3 class="project-title">Food Safety App</h3>
                             <a href="#" class="project-link">
                                 Ver demo <i class="fas fa-arrow-right"></i>
                             </a>
@@ -370,11 +370,11 @@
                 <div class="col-lg-6">
                     <div class="project-card">
                         <div class="project-image" style="background: linear-gradient(135deg, #4a90e2 0%, #b7d86f 100%);">
-                            <i class="fas fa-fog"></i>
+                            <i class="fas fa-dog" style="color: #ffffff;"></i>
                         </div>
                         <div class="project-content">
-                            <div class="project-category">Web Application</div>
-                            <h3 class="project-title">Farmacia Online</h3>
+                            <div class="project-category">E-commerce</div>
+                            <h3 class="project-title">Woof & Barf</h3>
                             <a href="#" class="project-link">
                                 Ver demo <i class="fas fa-arrow-right"></i>
                             </a>
@@ -397,20 +397,20 @@
                         
                         <div class="mb-4">
                             <h6 style="color: var(--color-oscuro); font-weight: 600;">Email</h6>
-                            <p style="color: #666;">ricardo.dev@gmail.com</p>
+                            <p style="color: #667;">ricardoaviless.sanchez@gmail.com</p>
                         </div>
 
                         <div class="mb-4">
                             <h6 style="color: var(--color-oscuro); font-weight: 600;">WhatsApp</h6>
-                            <p style="color: #666;">+52 55 1234 5678</p>
+                            <p style="color: #667;">+52 55 1242 6882</p>
                             <a href="#" class="btn btn-sm" style="background-color: var(--color-base); color: var(--color-oscuro); font-weight: 600;">
-                                Escribeme <i class="fas fa-arrow-right ms-2"></i>
+                                Escríbeme <i class="fas fa-arrow-right ms-2"></i>
                             </a>
                         </div>
 
                         <div>
                             <h6 style="color: var(--color-oscuro); font-weight: 600;">Ubicación</h6>
-                            <p style="color: #666;">Ciudad de México, México</p>
+                            <p style="color: #667;">Ciudad de México, México</p>
                         </div>
                     </div>
                 </div>
