--- a/index.html
+++ b/index.html
@@ -517,22 +517,20 @@
                 <div class="col-lg-3">
                     <h5 class="footer-title">Sígueme</h5>
                     <div class="social-links">
-                        <a href="www.linkedin.com/in/ricardo-avilés-sánchez-529b66186" class="social-link" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/in/ricardo-avilés-sánchez-529b66186" class="social-link" aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
-                        </a>
+                        </a>    
                         <a href="https://github.com/ricardoavi304" class="social-link" aria-label="GitHub">
                             <i class="fab fa-github"></i>
-                        
+                        </a>    
                     </div>
                 </div>
-            </div>
 
             <hr style="border-color: rgba(255, 255, 255, 0.1); margin: 2rem 0 1rem;">
             
             <div class="text-center" style="color: rgba(255, 255, 255, 0.6);">
                 <p class="mb-0">© Copyright Ricardo. Todos los derechos reservados 2025</p>
             </div>
-        </div>
     </footer>
 
     <!-- Bootstrap JS -->
