--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                     </div>
                     <div class="col-6 col-md-4 col-lg-2">
                         <div class="skill-card">
-                            <div class="skill-icon"><i class="fas fa-code" style="color: #0db7ed;"></i></div>
-                            <div class="skill-name">Express.js</div>
+                            <i class="fas fa-database fa-3x" style="color: #f29111;"></i>
+                            <div class="skill-name">SQL</div>
                             <div class="skill-level"></div>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
         </div>
     </section>
 
-                       <h3 class="mb-4"><i class="fas fa-graduation-cap me-2" style="color: var(--color-contraste);"></i> Educación</h3>
+                        <h3 class="mb-4"><i class="fas fa-graduation-cap me-2" style="color: var(--color-contraste);"></i> Educación</h3>
                     
                     <div class="timeline-item">
                         <div class="timeline-content">
