--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                     </div>
                     <div class="col-6 col-md-4 col-lg-2">
                         <div class="skill-card">
-                            <div class="skill-icon"><i class="fab fa-vuejs" style="color: #4FC08D;"></i></div>
-                            <div class="skill-name">.js</div>
+                            <div class="skill-icon"><i class="fab fa-jira" style="color: #4FC08D;"></i></div>
+                            <div class="skill-name">Jira</div>
                             <div class="skill-level"></div>
                         </div>
                     </div>
