--- a/index.html
+++ b/index.html
@@ -85,18 +85,10 @@
                     </div>
                 </div>
                 
-                <div class="col-lg-6">
-                    <div class="hero-avatar">
-                        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                            <!-- Avatar illustration -->
-                            <circle cx="100" cy="80" r="35" fill="white" opacity="0.9"/>
-                            <path d="M100,120 Q80,140 60,160 L140,160 Q120,140 100,120" fill="white" opacity="0.9"/>
-                            <circle cx="90" cy="75" r="3" fill="#333"/>
-                            <circle cx="110" cy="75" r="3" fill="#333"/>
-                            <path d="M90,90 Q100,95 110,90" stroke="#333" stroke-width="2" fill="none"/>
-                            <ellipse cx="100" cy="50" rx="40" ry="25" fill="white" opacity="0.8"/>
-                        </svg>
-                    </div>
+                <div class="hero-avatar text-center">
+                    <img src="./Fotografias/richi.png" alt="Foto de Ricardo" class="avatar-img">
+                </div>
+
                     
                     <div class="row mt-4">
                         <div class="col-4">
