link a repositorio de proyecto

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         <div class="project-content">
                             <div class="project-category">E-commerce</div>
                             <h3 class="project-title">Woof & Barf</h3>
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/Arukado69/Proyecto-Integrador" class="project-link">
                                 Ver demo <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
@@ -402,12 +402,12 @@
                         
                         <div class="mb-4">
                             <h6 style="color: var(--color-oscuro); font-weight: 600;">Email</h6>
-                            <p style="color: #667;">ricardoaviless.sanchez@gmail.com</p>
+                            <p style="color: #777;">ricardoaviless.sanchez@gmail.com</p>
                         </div>
 
                         <div class="mb-4">
                             <h6 style="color: var(--color-oscuro); font-weight: 600;">WhatsApp</h6>
-                            <p style="color: #667;">+52 55 1242 6882</p>
+                            <p style="color: #777;">+52 55 1242 6882</p>
                             <a href="#" class="btn btn-sm" style="background-color: var(--color-base); color: var(--color-oscuro); font-weight: 600;">
                                 Escríbeme <i class="fas fa-arrow-right ms-2"></i>
                             </a>
@@ -415,7 +415,7 @@
 
                         <div>
                             <h6 style="color: var(--color-oscuro); font-weight: 600;">Ubicación</h6>
-                            <p style="color: #667;">Ciudad de México, México</p>
+                            <p style="color: #777;">Ciudad de México, México</p>
                         </div>
                     </div>
                 </div>
