--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <div class="timeline-item">
                         <div class="timeline-content">
                             <div class="timeline-date">Actual</div>
-                            <h4 class="timeline-title">Full Stack Developer</h4>
+                            <h4 class="timeline-title"> Bootcamp: Full Stack Developer</h4>
                             <p class="timeline-subtitle">Generation - México</p>
                         </div>
                     </div>
@@ -365,6 +365,10 @@
                         <div class="project-content">
                             <div class="project-category">Web App</div>
                             <h3 class="project-title">Food Safety App</h3>
+                            <!-- Texto adicional debajo del título -->
+                            <p class="project-description">
+                            Plataforma para hacer auditorias de higiene y calidad, enfocada en seguridad alimentaria.
+                            </p>
                             <a href="#" class="project-link">
                                 Ver demo <i class="fas fa-arrow-right"></i>
                             </a>
@@ -380,6 +384,10 @@
                         <div class="project-content">
                             <div class="project-category">E-commerce</div>
                             <h3 class="project-title">Woof & Barf</h3>
+                            <!-- Texto adicional debajo del título -->
+                            <p class="project-description">
+                            Plataforma de venta de alimentos naturales para mascotas, enfocada en nutrición y bienestar animal.
+                            </p>
                             <a href="https://github.com/Arukado69/Proyecto-Integrador" class="project-link">
                                 Ver demo <i class="fas fa-arrow-right"></i>
                             </a>
