--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                     </div>
                     <div class="col-6 col-md-4 col-lg-2">
                         <div class="skill-card">
-                            <div class="skill-icon"><i class="fab fa-aws" style="color: #FF9900;"></i></div>
-                            <div class="skill-name">AWS</div>
+                            <div class="skill-icon"><i class="fab fa-java" style="color: #FF9900;"></i></div>
+                            <div class="skill-name">Java</div>
                             <div class="skill-level"></div>
                         </div>
                     </div>
