cambios en pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ricardo - Frontend Developer</title>
+    <title>Ricardo - Desarrollador Java Full-Stack</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- Google Fonts -->
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="#inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#sobre-mi">Sobre mí</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
@@ -56,9 +59,9 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-5 mb-lg-0">
                     <div class="hero-content">
-                        <h1>Hola, soy Ricardo<br>Frontend Developer<br>de México</h1>
+                        <h1>Hola, soy Ricardo Desarrollador Full Stack Java</h1>
                         <p class="hero-bio">
-                            <strong>"¡Hola! Soy Ricardo, Desarrollador Front-End.</strong> Transformo ideas en interfaces digitales cautivadoras, priorizando la usabilidad y accesibilidad para ofrecer experiencias web únicas en cualquier dispositivo."
+                            <strong>"¡Hola! Soy Ricardo.</strong> Diseño e implemento soluciones web integrales que convierten ideas en interfaces funcionales y atractivas. Priorizo la usabilidad, la accesibilidad y la compatibilidad multiplataforma, aplicando buenas prácticas de desarrollo con Java, tecnologías front-end modernas y arquitectura escalable.
                         </p>
                         
                         <div class="contact-info">
@@ -109,6 +112,77 @@
                                 <div class="stat-label"></div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sobre Mí Section -->
+    <section id="sobre-mi" class="about-section">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-title">Sobre Mí</h2>
+                <p class="section-subtitle">Conoce mi historia y mis pasiones</p>
+            </div>
+
+            <div class="row justify-content-center mb-5">
+                <div class="col-lg-10">
+                    <div class="about-content">
+                        <p class="about-text">
+                            Soy un joven progresista y me encanta la seguridad alimentaria, pero también tengo mucha curiosidad por el área tecnológica porque siempre me llamó la atención, afortunadamente decidí adentrarme a este campo de una manera más especializada y termino por gustarme mucho.
+                        </p>
+                        
+                        <p class="about-text">
+                            Mi viaje en la tecnología comenzó con una simple curiosidad que se convirtió en pasión. Cada línea de código que escribo, cada proyecto que desarrollo y cada problema que resuelvo me acerca más a mi objetivo de servir a las personas con mi conocimiento.
+                        </p>
+
+                        <div class="about-highlight">
+                            <h5 style="color: var(--color-contraste); font-weight: 600; margin-bottom: 1rem;">
+                                <i class="fas fa-quote-left me-2"></i>Mi filosofía
+                            </h5>
+                            <p style="margin: 0; color: var(--color-oscuro); font-style: italic;">
+                                Creo firmemente que la tecnología puede ser una herramienta poderosa para generar cambios positivos en la sociedad. Mi interés por la seguridad alimentaria y la tecnología no son caminos separados, sino que busco integrarlos para crear soluciones innovadoras que impacten en el bienestar de las personas.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div class="interest-card">
+                        <div class="interest-icon">
+                            <i class="fas fa-seedling"></i>
+                        </div>
+                        <h4 class="interest-title">Seguridad Alimentaria</h4>
+                        <p class="interest-description">
+                            Me apasiona contribuir a un mundo donde todos tengan acceso a alimentos seguros y nutritivos. Busco formas de aplicar la tecnología en este campo.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="interest-card">
+                        <div class="interest-icon">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <h4 class="interest-title">Desarrollo Web</h4>
+                        <p class="interest-description">
+                            Estoy emocionado de aprender más cada día sobre programación. Me fascina cómo el código puede transformarse en experiencias interactivas y útiles.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="interest-card">
+                        <div class="interest-icon">
+                            <i class="fas fa-lightbulb"></i>
+                        </div>
+                        <h4 class="interest-title">Innovación Social</h4>
+                        <p class="interest-description">
+                            Como joven progresista, busco constantemente maneras de usar mis habilidades para generar un impacto positivo en mi comunidad y más allá.
+                        </p>
                     </div>
                 </div>
             </div>
