--- a/index.html
+++ b/index.html
@@ -92,31 +92,7 @@
                     <img src="./Fotografias/richi.png" alt="Foto de Ricardo" class="avatar-img">
                 </div>
 
-                    
-                    <div class="row mt-4">
-                        <div class="col-4">
-                            <div class="stat-card">
-                                <div class="stat-number"></div>
-                                <div class="stat-label"></div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="stat-card">
-                                <div class="stat-number"></div>
-                                <div class="stat-label"></div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="stat-card">
-                                <div class="stat-number"></div>
-                                <div class="stat-label"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- Sobre Mí Section -->
     <section id="sobre-mi" class="about-section">
@@ -370,7 +346,7 @@
                 <p class="section-subtitle">¿Qué ofrezco?</p>
             </div>
 
-            <div class="row g-4">
+            <div class="row g-4 justify-content-center">
                 <div class="col-lg-3 col-md-6">
                     <div class="service-card">
                         <div class="service-icon">
@@ -395,17 +371,6 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="service-card">
-                        <div class="service-icon">
-                            <i class="fab fa-aws"></i>
-                        </div>
-                        <h4 class="service-title">Soluciones AWS</h4>
-                        <p class="service-description">
-                            Implemento soluciones inteligentes en AWS que transforman la infraestructura empresarial, reduciendo costos y mejorando la eficacia operativa en la nube.
-                        </p>
-                    </div>
-                </div>
 
                 <div class="col-lg-3 col-md-6">
                     <div class="service-card">
