--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
     </nav>
 
     <!-- Hero Section -->
+    <div class="mb-4"></div> <!-- Espacio vertical -->
     <section id="inicio" class="hero-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 mb-5 mb-lg-0">
+                <div class="col-lg-6 mb-2 mb-lg-4">
                     <div class="hero-content">
                         <h1>Hola, soy Ricardo Desarrollador Full Stack Java</h1>
                         <p class="hero-bio">
@@ -455,7 +456,7 @@
                         <div class="mb-4">
                             <h6 style="color: var(--color-oscuro); font-weight: 600;">WhatsApp</h6>
                             <p style="color: #777;">+52 55 1242 6882</p>
-                            <a href="#" class="btn btn-sm" style="background-color: var(--color-base); color: var(--color-oscuro); font-weight: 600;">
+                            <a href="https://wa.me/525512426882" class="btn btn-sm" style="background-color: var(--color-base); color: var(--color-oscuro); font-weight: 600;">
                                 Escríbeme <i class="fas fa-arrow-right ms-2"></i>
                             </a>
                         </div>
