--- a/index.html
+++ b/index.html
@@ -400,16 +400,16 @@
                 <div class="col-lg-6">
                     <div class="project-card">
                         <div class="project-image">
-                            <i class="fas fas fa-utensils"></i>
+                            <i class="fas fas fa-phone"></i>
                         </div>
                         <div class="project-content">
-                            <div class="project-category">Web App</div>
-                            <h3 class="project-title">Food Safety App</h3>
+                            <div class="project-category">Hackathon</div>
+                            <h3 class="project-title">Creación de Agenda</h3>
                             <!-- Texto adicional debajo del título -->
                             <p class="project-description">
-                            Plataforma para hacer auditorias de higiene y calidad, enfocada en seguridad alimentaria.
+                            Hackathon de 8 horas para la creación de una agenda telefónica usando JAVA.
                             </p>
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/amahiranyy/hackathon-2-agenda" class="project-link">
                                 Ver demo <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
