--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <div class="hero-content">
                         <h1>Hola, soy Ricardo Desarrollador Full Stack Java</h1>
                         <p class="hero-bio">
-                            <strong>"¡Hola! Soy Ricardo.</strong> Diseño e implemento soluciones web integrales que
-                            convierten ideas en interfaces funcionales y atractivas. Priorizo la usabilidad, la
-                            accesibilidad y la compatibilidad multiplataforma, aplicando buenas prácticas de desarrollo
-                            con Java, tecnologías front-end modernas y arquitectura escalable.
+                            <strong>"¡Hola! Soy Ricardo.</strong> Diseño e implemento soluciones web robustas que
+                            transforman ideas en sistemas escalables y seguros. Priorizo la eficiencia, la integridad de
+                            los datos y el rendimiento del servidor, aplicando buenas prácticas de desarrollo con Java,
+                            frameworks modernos y arquitecturas orientadas a microservicios.
                         </p>
 
                         <div class="contact-info">
@@ -121,7 +121,9 @@
                                         Soy un joven progresista y me encanta la seguridad alimentaria, pero también
                                         tengo mucha curiosidad por el área tecnológica porque siempre me llamó la
                                         atención, afortunadamente decidí adentrarme a este campo de una manera más
-                                        especializada y termino por gustarme mucho en especial el mundo de Java.
+                                        especializada y termino por gustarme mucho en especial el mundo de Java así como
+                                        la parte del servidor de una aplicación o sitio web que no es visible para los
+                                        usuarios, pero que es esencial para su funcionamiento, el famoso backend.
                                     </p>
 
                                     <p class="about-text">
@@ -138,10 +140,7 @@
                                         </h5>
                                         <p style="margin: 0; color: var(--color-oscuro); font-style: italic;">
                                             Creo firmemente que la tecnología puede ser una herramienta poderosa para
-                                            generar cambios positivos en la sociedad. Mi interés por la seguridad
-                                            alimentaria y la tecnología no son caminos separados, sino que busco
-                                            integrarlos para crear soluciones innovadoras que impacten en el bienestar
-                                            de las personas.
+                                            generar cambios positivos en la sociedad.
                                         </p>
                                     </div>
                                 </div>
