--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
                                         atención, afortunadamente decidí adentrarme a este campo de una manera más
                                         especializada y termino por gustarme mucho en especial el mundo de Java así como
                                         la parte del servidor de una aplicación o sitio web que no es visible para los
-                                        usuarios, pero que es esencial para su funcionamiento, el famoso backend.
+                                        usuarios, el famoso backend.
                                     </p>
 
                                     <p class="about-text">
                                         Mi viaje en la tecnología comenzó con una simple curiosidad que se convirtió en
                                         pasión. Cada línea de código que escribo, cada proyecto que desarrollo y cada
                                         problema que resuelvo me acerca más a mi objetivo de servir a las personas con
-                                        mi conocimiento.
+                                        mi conocimiento y aportar valor a su organización.
                                     </p>
 
                                     <div class="about-highlight">
@@ -177,12 +177,13 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="interest-card">
                                     <div class="interest-icon">
-                                        <i class="fas fa-lightbulb"></i>
+                                        <i class="fas fa-server"></i>
                                     </div>
-                                    <h4 class="interest-title">Innovación Social</h4>
+                                    <h4 class="interest-title">Desarrollo Backend</h4>
                                     <p class="interest-description">
-                                        Como joven progresista, busco constantemente maneras de usar mis habilidades
-                                        para generar un impacto positivo en mi comunidad y más allá.
+                                        Como desarrollador backend comprometido con la excelencia, aplico mis
+                                        habilidades técnicas para diseñar y optimizar sistemas confiables, seguros y
+                                        escalables.
                                     </p>
                                 </div>
                             </div>
@@ -355,7 +356,7 @@
 
                                 <div class="timeline-item">
                                     <div class="timeline-content">
-                                        <div class="timeline-date">Actual</div>
+                                        <div class="timeline-date">2025</div>
                                         <h4 class="timeline-title"> Bootcamp: Full Stack Developer</h4>
                                         <p class="timeline-subtitle">Generation - México</p>
                                     </div>
@@ -387,14 +388,13 @@
                                         <div class="col-lg-3 col-md-6">
                                             <div class="service-card">
                                                 <div class="service-icon">
-                                                    <i class="fas fa-paint-brush"></i>
+                                                    <i class="fas fa-cogs"></i>
                                                 </div>
-                                                <h4 class="service-title">Diseño UI/UX</h4>
+                                                <h4 class="service-title">Backend</h4>
                                                 <p class="service-description">
-                                                    Transformo ideas en interfaces digitales cautivadoras, priorizando
-                                                    la usabilidad y accesibilidad para ofrecer experiencias web únicas
-                                                    en cualquier dispositivo.
-                                                </p>
+                                                    Desarrollo y optimizo la lógica del lado del servidor, transformando
+                                                    ideas en sistemas confiables y escalables. Priorizo la seguridad, la
+                                                    integridad de los datos y el rendimiento.
                                             </div>
                                         </div>
 
@@ -483,9 +483,10 @@
                                                     <div style="display: flex; gap: 10px;">
                                                         <a href="https://github.com/Arukado69/Proyecto-Integrador"
                                                             class="project-link">
-                                                            Ver demo <i class="fas fa-arrow-right"></i>
+                                                            Ver repositorio <i class="fas fa-arrow-right"></i>
                                                         </a>
-                                                        <a href="http://52.15.203.222/index.html" class="project-link">
+                                                        <a href="https://proyecto-integrador-gold-theta.vercel.app/index.html"
+                                                            class="project-link">
                                                             Ver página <i class="fas fa-external-link-alt"></i>
                                                         </a>
                                                     </div>
@@ -606,8 +607,8 @@
                                                     <div class="col-lg-3 col-6 mb-4 mb-lg-0">
                                                         <h5 class="footer-title">Servicios</h5>
                                                         <ul class="footer-links">
-                                                            <li><a href="#servicios">Diseño UI/UX</a></li>
-                                                            <li><a href="#servicios">Desarrollo Web</a></li>
+                                                            <li><a href="#contactos">Backend</a></li>
+                                                            <li><a href="#contactos">Desarrollo Web</a></li>
                                                             <li><a href="#contactos">Consultoría</a></li>
                                                         </ul>
                                                     </div>
